# avr-cmake-template

./: CMakeLists.txt  LICENSE
cmake/: avr-toolchain.cmake  flash.cmake
